# protocol-evaluation

./: .gitignore  Makefile  README.md  pyproject.toml  run_client.py  run_processor.py
.github/: copilot-instructions.md
.github/actions/setup/: action.yml
.github/workflows/: test.yml
analyze/: env_config.py  processor.py  venv_manager.py
api/: __init__.py  config.py  file_storage.py  main.py  version_mapping.py
client/: README.md  __init__.py  analyze_client.py  evaluate_client.py
evaluate/: env_config.py  job_status.py  processor.py  venv_manager.py
test-files/custom-labware-only/: Flex_S_v2_25_P50_P200_stacker_all_parts.py  custom_opentrons_tough_pcr_auto_sealing_lid.json  stackable_opentrons_96_wellplate_200ul_pcr_full_skirt.json
test-files/only-not-rtp-override/: OpentronsAI_CSV_AND_CustomLabware.py  eppendorf_96_wellplate_150ul.json  plates.csv
test-files/rtp-csv-only/: OpentronsAI_CSV.py
test-files/simple/: Flex_S_v2_24_P50_PAPI_Changes.py
tests/e2e/: __init__.py  test_protocol_analysis.py
tests/integration/: test_analyze.py  test_evaluate.py  test_info.py
tests/unit/: test_analyze.py  test_evaluate.py  test_file_storage.py  test_info.py  test_processor.py
